[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acolyte"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
acolyte = "acolyte.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src/"]
